# tennis-leagues

./: .gitignore  Cargo.toml  README.md  config.toml  hot_reload.sh
assets/: 404.html  home.html  index.html  login.html  register.html
assets/admin/: index.html
assets/css/: main.css
assets/js/: json_forms.js  main.js  tennis_leagues.js
migrations/: 1_InitialTables.sql  2_TennisTables.sql  3_LeaguesAndPlayers.sql  4_InitialUser.sql
src/: app_route_handlers.rs  auth.rs  config.rs  default_route_handlers.rs  main.rs  middleware.rs  routes.rs  utilities.rs
src/default_route_handlers/: validations.rs
src/tests/: mod.rs
